Google Mock Test Giving

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,10 @@
     "typeindex": "cpp",
     "typeinfo": "cpp",
     "valarray": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "expected": "cpp",
+    "spanstream": "cpp",
+    "stacktrace": "cpp",
+    "__nullptr": "cpp"
   }
 }
