Increasing Subsequence Done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,7 @@
     "expected": "cpp",
     "spanstream": "cpp",
     "stacktrace": "cpp",
-    "__nullptr": "cpp"
+    "__nullptr": "cpp",
+    "__tree": "cpp"
   }
 }
